# multikit

./: .codecov.yml  .gitignore  README.md  REQUIREMENTS.md  TODO.md  pyproject.toml  tox.ini
.github/: ci-governance.md  copilot-instructions.md  project-docs-governance.md  readme-governance.md  structure-governance.md  versioning-governance.md
.github/agents/: cikit.analyze.change.agent.md  cikit.ci.doctor.agent.md  cikit.ci.governance.agent.md  cikit.ci.setup.agent.md  cikit.help.agent.md  copilot-instructions.md  demokit.design.agent.md  dockit.analyze.readme.agent.md  dockit.generate.project_docs.agent.md  dockit.generate.readme.agent.md  dockit.governance.project_docs.agent.md  dockit.governance.readme.agent.md  gitkit.changelog.agent.md  gitkit.commit.agent.md  gitkit.help.agent.md  gitkit.pr.agent.md  lintkit.analyze.python.agent.md  multikit.generation.agent.md  multikit.improve.agent.md  multikit.readme.governance.agent.md  multikit.readme.proposal.agent.md  multikit.register.agent.md  promptkit.help.agent.md  promptkit.improve.agent.md  promptkit.specify.agent.md  refactorkit.help.agent.md  speckit.analyze.agent.md  speckit.clarify.agent.md  speckit.help.agent.md  structkit.fix.agent.md  structkit.help.agent.md  testkit.plan.agent.md  testkit.python.demobuilder.agent.md  testkit.testcoverage.agent.md  testkit.testdesign.agent.md
.github/prompts/: cikit.analyze.change.prompt.md  cikit.analyze.versioning.prompt.md  cikit.ci.check.prompt.md  cikit.ci.governance.prompt.md  cikit.governance.versioning.prompt.md  cikit.help.prompt.md  dockit.analyze.project_docs.prompt.md  dockit.analyze.readme.prompt.md  dockit.generate.project_docs.prompt.md  dockit.generate.readme.prompt.md  dockit.governance.project_docs.prompt.md  dockit.help.prompt.md  gitkit.commit.prompt.md  gitkit.help.prompt.md  lintkit.analyze.prompt.md  lintkit.analyze.python.prompt.md  multikit.improve.prompt.md  multikit.readme.governance.prompt.md  multikit.readme.proposal.prompt.md  promptkit.analyze.prompt.md  promptkit.help.prompt.md  promptkit.script.prompt.md  refactorkit.diagnose.prompt.md  refactorkit.fix.prompt.md  speckit.help.prompt.md  structkit.governance.prompt.md  structkit.help.prompt.md  testkit.analyze.prompt.md  testkit.coverage.prompt.md  testkit.design.prompt.md  testkit.help.prompt.md  testkit.python.demobuilder.prompt.md  testkit.python.testcoverage.prompt.md  testkit.testdesign.prompt.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
kits/: registry.json
kits/cikit/: .objective  manifest.json
kits/demokit/: .objective  manifest.json
kits/dockit/: .objective  manifest.json
kits/gitkit/: .objective  manifest.json
kits/lintkit/: manifest.json
scripts/: integration-test.sh
tests/: conftest.py  test_badge_ci_workflow.py  test_badge_local_preview.py  test_cli.py  test_diff.py  test_diff_utils.py  test_install.py  test_models.py  test_readme_badges.py  test_registry.py  test_uninstall.py
(+143 files in other folders)
