[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multikit"
version = "0.1.0"
description = "Kit manager for VS Code Copilot agents and prompts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "aiofiles>=24.0.0",
    "aiohttp>=3.9.0",
    "cyclopts>=3.6",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "questionary>=2.1.1",
    "tabulate>=0.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "types-tabulate>=0.9.0.20241207",
]

[project.scripts]
multikit = "multikit.cli:app"

[tool.rye]
managed = true
dev-dependencies = [
    "aioresponses>=0.7.6",
    "mypy>=1.19.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.4",
    "tox>=4.36.0",
    "tox-gh-actions>=3.5.0",
    "types-tabulate>=0.9.0.20241207",
    "types-aiofiles>=25.1.0.20251011",
]

[tool.rye.scripts]
test = "pytest tests/ -v"
"test:cov" = "pytest tests/ --cov=multikit --cov-report=term-missing --cov-report=xml:coverage.xml"
"test:tox" = "tox"
"badge:preview" = "pytest tests/ --cov=multikit --cov-report=term --cov-report=xml:coverage.xml -q"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"

[tool.hatch.build.targets.wheel]
packages = ["src/multikit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["multikit"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["tomli_w", "questionary"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tabulate"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tomllib", "aioresponses"]
ignore_missing_imports = true
